# swc

./: .commitlintrc.js  .eslintignore  .eslintrc.js  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  config.toml  jest.config.js  package.json  tsconfig.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: auto-publisher.yml  build_swc.yml  ci.yml  contributors.yml
node/: index.ts  package.json  types.ts
node/__tests__/: index.test.ts  removeExportExprs.test.ts
node/src/: index.ts  types.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: copySwcBinaries.ts  getPackageInfos.ts  publishPackage.ts  publishPackageWithDistTag.ts
src/: lib.rs  minify.rs  transform.rs  util.rs
src/keep_platform/: mod.rs
src/remove_export_exprs/: mod.rs
tests/: fixture.rs  full.rs
tests/fixture/keep_platform/kraken/: output.js
tests/fixture/keep_platform/namespace/kraken/: input.js  output.js
tests/fixture/keep_platform/namespace/web/: input.js  output.js
tests/fixture/keep_platform/web/: output.js
tests/fixture/remove_export_exprs/preserveConfig/base/: input.js  output.js
tests/fixture/remove_export_exprs/preserveConfig/destructuring-assignment-array/: input.js  output.js
tests/fixture/remove_export_exprs/preserveConfigAndDefault/base/: input.js  output.js
tests/fixture/remove_export_exprs/preserveConfigAndDefault/destructuring-assignment-array/: input.js  output.js
tests/fixture/remove_export_exprs/preserveData/base/: output.js
tests/fixture/remove_export_exprs/preserveData/destructuring-assignment-array/: output.js
tests/fixture/remove_export_exprs/preserveData/remove-default-decl/: output.js
tests/fixture/remove_export_exprs/preserveData/remove-default-expr/: input.js
tests/fixture/remove_export_exprs/preserveData/remove-import-from-default/: input.js  output.js
tests/fixture/remove_export_exprs/preserveDefault/base/: input.js  output.js
tests/fixture/remove_export_exprs/preserveDefault/destructuring-assignment-array/: input.js  output.js
tests/fixture/remove_export_exprs/removeData/base/: output.js
tests/fixture/remove_export_exprs/removeData/normalFnExp/: input.js  output.js
tests/fixture/remove_export_exprs/removeData/varDeclExport/: input.js  output.js
tests/minify/base_syntax/: output.js
tests/minify/remove_platform_code/kraken/: output.js
tests/minify/remove_platform_code/web/: output.js
tests/node/: index.test.ts  keep-platform.test.ts  removeExportExprs.test.ts
tests/unminify/base_syntax/: input.js  output.js
tests/unminify/react/: input.js  output.js
