[package]
edition = "2018"
name = "builder-swc"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
backtrace = "0.3"
chrono = "0.4"
easy-error = "1.0.0"
napi = {version = "1", features = ["serde-json"]}
napi-derive = "1"
path-clean = "0.1"
regex = "1.5"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", features = ["unbounded_depth"]}
swc = "0.181.0"
swc_atoms = "0.2.11"
swc_common = { version = "0.18.5", features = ["concurrent", "sourcemap"] }
swc_ecma_loader = { version = "0.30.1", features = ["node", "lru"] }
swc_ecmascript = { version = "0.157.0", features = ["codegen", "minifier", "optimization", "parser", "react", "transforms", "typescript", "utils", "visit"] }
swc_node_base = "0.5.3"
retain_mut = "0.1.3"
pathdiff = "0.2.0"
rustc-hash = "1.1.0"
lazy_static = "1.4.0"
tracing-subscriber = "0.3.9"
tracing="0.1.34"
fxhash= "0.2.1"

[dev-dependencies]
swc_ecma_transforms_testing = "0.87.0"
testing = "0.20.0"
walkdir = "2.3.2"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
